--- a/contrib/doc/MathSyntax/setup.tex
+++ b/contrib/doc/MathSyntax/setup.tex
@@ -1,4 +1,5 @@
-\section{Experimental Setup}
+\chapter{Methods}
+\section{Training Corpus}
 The primary corpus on which we base this investigation is the Cornel pre-print archive ``\arxiv''\ednote{cite here}, consisting of over 700,000 articles in 37 scientific subfields.
 \subsection{\arxiv Sandbox}
 \ednote{Say that, on the \arxiv front, we first start with the train sandbox from Deyan's thesis}
@@ -20,3 +21,33 @@ Train10 & Algebraic Geometry \\  & \url{http://arxmliv.kwarc.info/files/0704/070
 \end{table}
 
 As a secondary resource, we we will also consult entry-level literature on highschool mathematics, in order to exhibit basic phenomena, as well as to demonstrate phenomena apriori known to the authors.\ednote{Wikipedia? PEMDAS?}
+
+\section{Structural Annotation}
+
+As one of the goals of our study is to establish a first guess of an underspecified operator tree\ednote{make sure the concepts are introduced and/or rephrase}, any annotation must at its core mark up the applicative logical structure of the mathematical expression. This process will build up a formula tree, the collection of which can later be used as a gold standard for developing a grammatical model of the language of symbolic mathematics.
+
+\section{Annotation Vocabulary}
+
+Another core goal is to discover and describe interesting linguistic phenomena that occur naturally in our corpus. Examples of what we consider ``interesting'' are phenomena that induce ambiguity, or legitimize what would typically be ungrammatical fragments. Cases of ambiguity are well-known to follow from semantic overloading of symbols, implicit argument scopes of operations or eliding syntax, leaving the reader with the task of guessing the ``invisible'' dynamics.Use of custom shorthands, however, as well as custom notations in general, expands the grammar of symbolic mathematics, often in completely non-standard ways that can only be grasped through a deep understanding of the document at hand.
+
+As multiple interesting observations can be made for a single large mathematical formula, it is natural to annotate multiple relevant subexpressions. More concretely, for each phenomenon of interest, we annotate the greatest common subtree (GCT) of all participating subtrees. In case we find a long-range relationship in a large formula, the annotation would hence be placed on the formula root.
+
+The annotations can be utilized for different purposes - browsing by specific phenomena, syntactic feature or lemma, training a classifier, etc. Thus, we take a compositional, standardized approach to providing labels from a fixed vocabulary for the relevant ontological classes of structural properties.
+
+\begin{table}
+\begin{center}
+\begin{tabular}{|l|l|} 
+\hline \textbf{Property} & \textbf{Keywords} \\ \hline
+\textbf{Fixity} & prefix, infix, postfix, superfix, subfix, circumfix, transfix, nofix\footnote{``atom'' may also be known as ``nofix''} \\[1mm]
+\textbf{Role (Symbols)} & separator, modifier, relation,  operator, metarelation \\[1mm]
+\textbf{Role (Objects)} & factor, term, statement, variable, constant, modified \\[1mm]
+\textbf{Role (Structure)} & tuple, sequence, expression, shorthand, notation \\[1mm]
+\textbf{Composition} & invisible, atom, complex, chained\\[1mm]
+\textbf{Shallow Semantics} & type, function, constructor, other \\[1mm]
+\textbf{Linguistic} & ellipsis, metonymy, ambiguity, vagueness, anaphora\\[1mm]
+\textbf{Math Practices} & framing\\[1mm]
+\hline
+\end{tabular}
+\caption{Keyword Vocabulary for Syntactic Properties}
+\end{center}
+\end{table}
