--- a/contrib/doc/MathSyntax/sets.tex
+++ b/contrib/doc/MathSyntax/sets.tex
@@ -3,12 +3,16 @@
 \ednote{also maps : domains -> codomains, xRy notations}
 
 \begin{entries}{Set Theory Notations, Part 1}{study:sets1}
-\entry{$ W \in \CP \cap \CZ $}{set membership}{infix relation}{set ops precede set relations, [Train1]}
-\entry{$ \; \nu : \overset{n}{\times} \BV \ra \BR$}{a map}{typed modifier}{$n$-ary cross-product, [Train1]}
-\entry{\footnotesize $\CZ^* = \{ X \in \CV \mid \om(X,W) \in \BZ, \text{ for all }  W \in \CZ \}$}{definition to set}{typed modifier}{NL mixins, quantified relation, [Train1]}
-\entry{$\text{span}_{\BR} \{ W_{1} , \dots ,W_{g} \} $}{span of a set}{prefix operator modified}{set operators can take fenced yet not simply \textit{grouped} arguments, [Train1]}
+\entry{$ W \in \CP \cap \CZ $}{set membership}%
+{ \MathTree [.\is{infix,relation}{$\in$} W [.$\cap$ $\CP$ $\CZ$ ] ] }%
+{set ops precede set relations, [Train1]}
+% \entry{$ \; \nu : \overset{n}{\times} \BV \ra \BR$}{a map}{typed modifier}{$n$-ary cross-product, [Train1]}
+% \entry{\footnotesize $\CZ^* = \{ X \in \CV \mid \om(X,W) \in \BZ, \text{ for all }  W \in \CZ \}$}{definition to set}{typed modifier}{NL mixins, quantified relation, [Train1]}
+% \entry{$\text{span}_{\BR} \{ W_{1} , \dots ,W_{g} \} $}{span of a set}{prefix operator modified}{set operators can take fenced yet not simply \textit{grouped} arguments, [Train1]}
 
-\entry{$\mathcal{BS}_{\CP} = \underset{\bq \in (\BZ/ k \BZ)^g}{\cup} \, \La_{\bq}$}{definitional assignment}{infix relation}{$n$-ary union, ranges over subscript, [Train1]}
-\entry{ $L_{12} = L_{\CP_1} \cap L_{\CP_2} \neq 0$}{non-transversal intersection}{modified chained}{acts as relation, is it modified or chained?, [Train1]}
-\entry{ $\al \in GL(g,\BZ) \subset Sp(2g,\BZ)$}{statement}{infix relation}{membership comes after set inclusion, due to well-typedness!, [Train1]}
+% \entry{$\mathcal{BS}_{\CP} = \underset{\bq \in (\BZ/ k \BZ)^g}{\cup} \, \La_{\bq}$}{definitional assignment}{infix relation}{$n$-ary union, ranges over subscript, [Train1]}
+% \entry{ $L_{12} = L_{\CP_1} \cap L_{\CP_2} \neq 0$}{non-transversal intersection}{modified chained}{acts as relation, is it modified or chained?, [Train1]}
+% \entry{ $\al \in GL(g,\BZ) \subset Sp(2g,\BZ)$}{statement}{infix relation}{membership comes after set inclusion, due to well-typedness!, [Train1]}
 \end{entries}
+
+%\Tree [.\is{infix,relation}{$\in$} [W .$\cap$ [$\CP$ $\CZ$] ] ]
