--- a/contrib/doc/MathSyntax/setup.tex
+++ b/contrib/doc/MathSyntax/setup.tex
@@ -26,6 +26,9 @@ As a secondary resource, we we will also consult entry-level literature on highs
 
 As one of the goals of our study is to establish a first guess of an underspecified operator tree\ednote{make sure the concepts are introduced and/or rephrase}, any annotation must at its core mark up the applicative logical structure of the mathematical expression. This process will build up a formula tree, the collection of which can later be used as a gold standard for developing a grammatical model of the language of symbolic mathematics.
 
+\ednote{I'm currently thinking of rendering the annotations as trees (tikz,pstricks...custom tree drawing package?), so that the annotator can proofread the annotations in an intuitive manner.}
+\ednote{In the XHTML, I'm thinking of ContentMML+SVG rendering, all of this figured out by the binding, maybe a custom stylesheet?}
+
 \section{Annotation Vocabulary}
 
 Another core goal is to discover and describe interesting linguistic phenomena that occur naturally in our corpus. Examples of what we consider ``interesting'' are phenomena that induce ambiguity, or legitimize what would typically be ungrammatical fragments. Cases of ambiguity are well-known to follow from semantic overloading of symbols, implicit argument scopes of operations or eliding syntax, leaving the reader with the task of guessing the ``invisible'' dynamics.Use of custom shorthands, however, as well as custom notations in general, expands the grammar of symbolic mathematics, often in completely non-standard ways that can only be grasped through a deep understanding of the document at hand.
