a days work , improving on tree syntax
git-svn-id: https://svn.mathweb.org/repos/LaTeXML@2200 2d0c7756-e317-0410-b71c-cbb6040a58f7

--- a/contrib/doc/MathSyntax/diffgeometry.tex
+++ b/contrib/doc/MathSyntax/diffgeometry.tex
@@ -16,7 +16,7 @@ Some intro text?\\
 
 \begin{entries}{Differential Geometry Notations, Part 1}{study:diffgeometry1}
 \entry{$(\CV/ \CZ, k \om)$}{symplectic torus}{circumfix constructor}{\train1}
-\entry{$\CZ$}{self-dual lattice}{atom notation}{\train1}
+\entry{$\CZ$}{self-dual lattice}{atom}{\train1}
 \entry{$(\CV, \om)$}{symplectic vector space}{circumfix constructor}{\train1}
 \entry{$\lag$}{Lagrangian Grassmannian}{circumfix constructor}{\train1}
 \entry{$\flag$}{4-fold covering space}{prefix constructor}{\train1}
@@ -29,7 +29,7 @@ Some intro text?\\
 \entry{$ X_{f} $}{field}{subfix constructor}{\train1}
 \entry{$\contrac$}{interior product}{complex infix operator}{Formed via $\backslash$mathop in {\TeX}, \train1}
 \entry{$[ \om ] \in H^{2}(M; \BR)$}{cohomology class}{complex variable modified}{\train1}
-\entry{$( \cdot , \cdot )$ }{notation patter, hermitian metric}{notation tuple}{\train1}
+\entry{$( \cdot , \cdot )$ }{template, hermitian metric}{template tuple}{\train1}
 \end{entries}
 
 \begin{nextentries}{Differential Geometry Notations, Part 2}{study:diffgeometry2}
