--- a/contrib/doc/MathSyntax/main.tex
+++ b/contrib/doc/MathSyntax/main.tex
@@ -4,7 +4,7 @@
 \usepackage{graphicx}
 \usepackage[usenames,svgnames]{xcolor}
 \chapterstyle{bianchi}
-%\usepackage{a4wide,amsfonts,amsthm,amsmath,appendix}
+\usepackage{a4wide,amsfonts,amsthm,amsmath,appendix}
 \usepackage[show]{ed}
 \usepackage{url}
 %\usepackage[colorlinks=true,linkcolor=blue,urlcolor=blue]{hyperref}
