--- a/contrib/doc/MathSyntax/setup.tex
+++ b/contrib/doc/MathSyntax/setup.tex
@@ -41,10 +41,10 @@ The annotations can be utilized for different purposes - browsing by specific ph
 \begin{center}
 \begin{tabular}{|l|l|} 
 \hline \textbf{Property} & \textbf{Keywords} \\ \hline
-\textbf{Fixity} & prefix, infix, postfix, superfix, subfix, circumfix, transfix, nofix\footnote{``atom'' may also be known as ``nofix''} \\[1mm]
-\textbf{Role (Symbols)} & separator, modifier, relation,  operator, metarelation \\[1mm]
+\textbf{Fixity} & over, under, prefix, infix, postfix, superfix, subfix, circumfix, transfix, nofix\footnote{``atom'' may also be known as ``nofix''} \\[1mm]
+\textbf{Role (Symbols)} & separator, modifier, relation,  operator, metarelation, binder \\[1mm]
 \textbf{Role (Objects)} & factor, term, statement, variable, constant, modified \\[1mm]
-\textbf{Role (Structure)} & tuple, sequence, expression, shorthand, notation \\[1mm]
+\textbf{Role (Structure)} & tuple, sequence, expression, shorthand, template, language \\[1mm]
 \textbf{Composition} & invisible, atom, complex, chained\\[1mm]
 \textbf{Shallow Semantics} & type, function, constructor, other \\[1mm]
 \textbf{Linguistic} & ellipsis, metonymy, ambiguity, vagueness, anaphora\\[1mm]
@@ -54,3 +54,5 @@ The annotations can be utilized for different purposes - browsing by specific ph
 \caption{Keyword Vocabulary for Syntactic Properties}
 \end{center}
 \end{table}
+
+\ednote{Additional tokens: super, sub, fenced}
