a days work , improving on tree syntax
git-svn-id: https://svn.mathweb.org/repos/LaTeXML@2201 2d0c7756-e317-0410-b71c-cbb6040a58f7

--- a/contrib/doc/MathSyntax/sets.tex
+++ b/contrib/doc/MathSyntax/sets.tex
@@ -21,7 +21,7 @@
               [.\isa{infix,relation}{$\in$} 
                 [.$\om$ $X$ $W$ ] $\BZ$ 
               ]
-              [.\isa{infix,operator,binder,language,other}{\text{for all}}
+              [.\isa{prefix,operator,binder,language,other}{\text{for all}}
                 [.\isa{infix,relation}{$\in$} 
                   $W$ $\CZ$ 
                 ]
