--- a/contrib/doc/MathSyntax/diffgeometry.tex
+++ b/contrib/doc/MathSyntax/diffgeometry.tex
@@ -15,7 +15,7 @@
 Some intro text?\\
 
 \begin{entries}{Differential Geometry Notations, Part 1}{study:diffgeometry1}
-\entry{$(\CV/ \CZ, k \om)$}{symplectic torus}{circumfix constructor}{\train1}
+\entry{$(\CV/ \CZ, k \om)$}{symplectic torus}{\MathTree[.Fenced [ [.$,$ [ .$/$ [$\CV$ $\CZ$ ] ] [.$\times$ [$k$ $\om$ ] ] ] ] ] }{\train1}
 \entry{$\CZ$}{self-dual lattice}{atom}{\train1}
 \entry{$(\CV, \om)$}{symplectic vector space}{circumfix constructor}{\train1}
 \entry{$\lag$}{Lagrangian Grassmannian}{circumfix constructor}{\train1}
