--- a/contrib/doc/MathSyntax/sets.tex
+++ b/contrib/doc/MathSyntax/sets.tex
@@ -7,7 +7,7 @@
 \begin{entries}{Set Theory Notations, Part 1}{study:sets1}
 \entry{$ W \in \CP \cap \CZ $}{set membership}%
 { \MathTree [.\is{infix,relation}{$\in$} W [.$\cap$ $\CP$ $\CZ$ ] ] }%
-{set ops precede set relations, [Train1]}
+{set operators precede set relations, [Train1]}
 
 \entry{$ \; \nu : \overset{n}{\times} \BV \ra \BR$}{a map}%
 {\MathTree [.$:$  $\nu$ [.$\ra$ [.$\narycross$ $\BV$ ] $\BR$ ] ] }%
