--- a/contrib/doc/MathSyntax/main.tex
+++ b/contrib/doc/MathSyntax/main.tex
@@ -150,7 +150,7 @@ Notation census, beginnings of study are in Deyan's thesis, Naproche and FMathL 
 \input{probability}
 \input{intervals}
 \input{topology}
-%\input{diffgeometry}
+\input{diffgeometry}
 
 \section{Other fields}
 \input{quantum}
